# rpgp-ffi

./: .gitignore  Cargo.toml  Makefile  README.md  main.c
src/: errors.rs  message.rs
